# custom_engine

./: .clang-format  .gitignore  CMakeLists.txt  CONSIDER.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
cmake/: options.cmake  showoptions.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: AutoCollect.cmake  FindMySQL.cmake  GroupSources.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/OptickCore/: CMakeLists.txt  optick.config.h  optick.h
dep/SFML/: CMakeLists.txt
dep/dlmalloc/: CMakeLists.txt  malloc-2.8.6.h  malloc.c
dep/json/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
src/: CMakeLists.txt
src/Base/: CMakeLists.txt
src/Base/Asio/: IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/Base/Clock/: ClockTimer.h  FixedUpdate.h  SystemTime.cpp  SystemTime.h  SystemTimeWin32.cpp  TimeType.h
src/Base/Common/: BaseIO.h  BaseMath.h  CompilerDefs.h  Defines.h  EnumClass.h  FixUpdVal.h  FixVal.h  LerpVal.h  Platform.h  PlatformUnix.h  PlatformWin.h  ProjectConfig.h  Types.h
src/Base/Concurrency/: Atomic.h  ConditionVariable.h  DThread.cpp  DThread.h  LockGuard.h  Mutex.cpp  Mutex.h  ThreadWin.cpp  UniqueLock.h
src/Base/Configuration/: Config.cpp  Config.h
src/Base/Containers/: Array.h  BasicString.h  Deque.h  Factory.h  FlagCount.cpp  FlagCount.h  GUIDGenerator.h  IDGenerator.h  List.h  Map.h  PriorityQueue.h  Queue.h  ScopedArrPtr.h  ScopedPtr.h  Set.h  SharedPtr.h  SharedResource.h  UniquePtr.h  UnorderedMap.h  UnorderedSet.h  Vector.h
src/Base/Containers/Ptr/: RefPtr.h
src/Base/Cryptography/: AES_256_CBC.cpp  AES_256_CBC.h  Cryptography.h
src/Base/Debug/: DBLAssert.cpp  DBLAssert.h  Errors.cpp  Errors.h  MGEAssert.cpp  MGEAssert.h  PrintErr.h  WheatyExceptionReport.cpp
src/Base/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp
src/Base/Event/: Action.cpp  Action.h  EventDefines.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventMgr.cpp  EventMgr.h  IEvent.cpp  IEvent.h
src/Base/FileSystem/: FSysAsync.cpp  FSysAsync.h  File.cpp  File.h  FileAction.cpp  FileAction.h  FileIO.h  FileIOC.cpp  FileIOUnix.cpp  FileIOWin.cpp  FileInfo.h  FileListBoost.cpp
src/Base/FileSystem/Pack/: ResourcePack.cpp  ResourcePack.h  RscPakDefines.h  RscPakMgr.cpp  RscPakMgr.h
src/Base/FileSystem/Pak/: PAKFile.cpp  PAKFile.h
src/Base/Functional/: BoostFunction.h  BoostSignal.h  Connection.h  Function.h
src/Base/Git/: GitRevision.cpp  GitRevision.h
src/Base/Hash/: Hash.h
src/Base/Hash/String/: HashCRC32.cpp  HashCRC32.h  HashDJB2.h  HashString.cpp  HashString.h  StringID.cpp  StringID.h
src/Base/Language/: Language.h  TranslationMgr.cpp  TranslationMgr.h
src/Base/Log/: LogDefines.h  Logger.cpp  Logger.h  LoggerC.cpp  LoggerWin32.cpp
src/Base/Memory/: Allocators.h  MMU.cpp  MMU.h  MemoryPool.h  MemoryTrack.h
src/Base/Memory/Allocator/: DLMalloc.c  DLMalloc.h
src/Base/Networking/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
src/Base/OS/: OS.h  OSUnix.cpp  OSWin32.cpp
src/Base/PrecompiledHeaders/: basePCH.h
src/Base/Profiler/: Profiler.h
src/Base/Schedule/: Schedule.cpp  Schedule.h
src/Base/Stream/: ByteStream.cpp  ByteStream.h  FileStream.cpp  FileStream.h  Stream.h  StreamDefines.h
src/Base/Threading/: ProcessPriority.cpp  ProcessPriority.h
src/Base/Utilities/: MessageBuffer.h  StringConvert.h  Timer.h  UTF8Util.cpp  Utils.cpp  Utils.h
src/Database/: AdhocStatement.h  CMakeLists.txt  DatabaseEnv.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLPreparedStatement.cpp  MySQLPreparedStatement.h  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/Database/Implementation/: CharacterDatabase.h  LoginDatabase.h  WorldDatabase.h
src/Database/PrecompiledHeaders/: databasePCH.h
src/Engine/: CMakeLists.txt
src/Engine/Defines/: Common.h  DBLDefines.h
src/Engine/Framework/: Application.cpp  Application.h
src/Engine/PrecompiledHeaders/: dblPCH.h  enginePCH.h
src/Engine/Resource/: DBLPakDefines.h  DBLPakHelpers.h  DBLRscPakMgr.cpp  DBLRscPakMgr.h
src/Game/: CMakeLists.txt  Client.aps  Client.rc  resource.h
src/Game/Main/: App.cpp  ClientApp.cpp  ClientApp.h  WinMain.cpp
src/Game/PrecompiledHeaders/: clientPCH.h
src/GlassCannon/: CMakeLists.txt  Main.cpp
src/GlassCannon/PrecompiledHeaders/: glscnnPCH.h
src/GlassCannon/Server/: AuthSession.cpp  AuthSession.h  AuthSocketMgr.h
