if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  string(REGEX REPLACE "/W[0-4] " "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  string(REGEX REPLACE "/W[0-4] " "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
  add_definitions(/W0)
else()
  add_definitions(-w)
endif()

add_subdirectory(boost)
# add_subdirectory(dlmalloc)
add_subdirectory(openssl)
add_subdirectory(utf8cpp)
add_subdirectory(zlib)
add_subdirectory(json)
add_subdirectory(fmt)